RESOLVED FIXED73243
[MutationObservers] Fix build breakage after CSSInlineDeclaration refactor
https://bugs.webkit.org/show_bug.cgi?id=73243
Summary [MutationObservers] Fix build breakage after CSSInlineDeclaration refactor
Rafael Weinstein
Reported 2011-11-28 13:21:37 PST
bug 73121 broke code that is behind the MUTATION_OBSERVERS compile flag.
Attachments
Patch (2.41 KB, patch)
2011-11-28 13:23 PST, Rafael Weinstein
no flags
Patch (3.05 KB, patch)
2011-11-28 13:51 PST, Rafael Weinstein
no flags
Rafael Weinstein
Comment 1 2011-11-28 13:23:16 PST
Ryosuke Niwa
Comment 2 2011-11-28 13:36:08 PST
Comment on attachment 116807 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=116807&action=review > Source/WebCore/css/CSSMutableStyleDeclaration.cpp:69 > + CSSInlineStyleDeclaration* inlineDecl = static_cast<CSSInlineStyleDeclaration*>(s_currentDecl); We should add toCSSInlineStyleDeclaration.
Rafael Weinstein
Comment 3 2011-11-28 13:51:35 PST
Ryosuke Niwa
Comment 4 2011-11-28 13:56:39 PST
Comment on attachment 116814 [details] Patch Thanks for adding toCSSInlineStyleDeclaration!
WebKit Review Bot
Comment 5 2011-11-28 17:31:50 PST
Comment on attachment 116814 [details] Patch Clearing flags on attachment: 116814 Committed r101310: <http://trac.webkit.org/changeset/101310>
WebKit Review Bot
Comment 6 2011-11-28 17:31:55 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.