[MutationObservers] Fix build breakage after CSSInlineDeclaration refactor https://bugs.webkit.org/show_bug.cgi?id=73243

Patch by Rafael Weinstein <rafaelw@chromium.org> on 2011-11-28
Reviewed by Ryosuke Niwa.

No tests needed. This patch only contains compile fixes.

* css/CSSMutableStyleDeclaration.cpp:

Canonical link: https://commits.webkit.org/89791@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@101310 268f45cc-cd09-0410-ab3c-d52691b4dbfc